<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Terms and Conditions"
                android:textSize="30sp"
                android:textColor="#000"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Terms of Use"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/term_1"
                android:textSize="16sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/term_2"
                android:textSize="16sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Intellectual Property Rights"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/term_3"
                android:textSize="16sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="User-Generated Content"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/term_4"
                android:textSize="16sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/term_5"
                android:textSize="16sp"></TextView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Third-party Websites and Content"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/term_6"
                android:textSize="16sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Rights to Terminate Accounts"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="15dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:text="@string/term_7"
                android:textSize="16sp"></TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"></TextView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>